Fix spacing on featured projects

--- a/_includes/assets/css/inline.css
+++ b/_includes/assets/css/inline.css
@@ -73,7 +73,7 @@ h2 {
 	margin: 0;
 }
 h3 {
-	margin-bottom: 0;
+	margin-bottom: 0.5em;
 }
 
 p {
@@ -81,6 +81,9 @@ p {
 }
 p + h3 {
 	margin-top: 1.5em;
+}
+h3 + p {
+	margin-bottom: 0;
 }
 
 p,
@@ -203,6 +206,7 @@ main > section > article > * {
 }
 
 .list-inline {
+	margin-top: 0;
 	margin-bottom: 1em;
 }
 .client-list {
